--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .App {
-  text-align: center;
+  box-shadow: 1px 1px 10px grey;
+  height: 80px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul {
+  list-style: none;
+  margin-left: 100px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  justify-content: space-between;
 }
-
-.App-link {
-  color: #61dafb;
+li {
+  padding: 2em;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li img {
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  display: block;
+  margin-top: -18px;
+}
+li a {
+  color: black;
+  text-decoration: none;
+  font-size: 40px;
+  font-weight: bold;
+  display: block;
+  margin-top: -18px;
+}
+.left-nav {
+  display: flex;
+}
+.right-nav {
+  display: flex;
+  margin-right: 100px;
 }
